--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Session Data files
 .RData
+*.Rproj
 
 # Example code in package build process
 *-Ex.R
@@ -16,10 +17,6 @@
 
 # RStudio files
 .Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
